a working simplified version with freemarker