@@ -18,6 +18,19 @@ application {
     applicationName = "pm"
 }
 
+
+tasks.register('testIntegrationReport', JavaExec) {
+    mainClass.set(application.mainClass)
+    classpath = sourceSets.main.runtimeClasspath
+
+    args('check', '--missing', '--settings', '--report', 'proofManagementReport.html', '--replay', '--dependency',
+            'proofBundle/simpleBundleGeneration')
+
+    // not necessary any more with the workaround in HTMLReport
+    // needed for access of Node.getValue in string template
+    // jvmArgs += ['--add-opens', 'java.base/java.util=ALL-UNNAMED']
+}
+
 run {
     // for debugging, something like this can be used:
     //args('check', '--missing', '--settings', '--report', 'proofManagementReport.html', '--replay', '--dependency', 'pmexample2')
